--- a/index.html
+++ b/index.html
@@ -1,27 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Lights Retribution</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="header-contain">
-            <div class="header">
-             <img src="resources/alliance.png">
-            <h1>Lights Retribution</h1>
-             </div>
+      <div class="header-contain">
+        <div class="header">
+          <img src="resources/alliance.png" />
+          <h1>Lights Retribution</h1>
         </div>
-        <div class="middle-contain">
-            <div class="about">
-            <h1>About</h1>
-            <p>Lights Vengeance was founded by the dwarven paladin, Thaergrum on a World Of Warcraft vanilla private server. It would go on to make itself a dominant force on the server, achieving multiple pvp ranks and server first raid clears.</p>
-            </div>
+      </div>
+      <div class="middle-contain">
+        <div class="about">
+          <h1>About</h1>
+          <p>
+            Lights Vengeance was founded by the dwarven paladin Thaergrum on a
+            World Of Warcraft vanilla private server. It would go on to make
+            itself a dominant force on the server, achieving multiple pvp ranks
+            and server first raid clears.
+          </p>
         </div>
-    
+        <div class="member-profile-top">
+          <img src="" alt="Thaergrum" />
+          <p>Marshal Thaergrum, Guild Master.</p>
+        </div>
+        <div class="member-profile-bottom">
+          <div class="member-profile">
+            <img src="" alt="" />
+            <p>some text about a character</p>
+          </div>
+          <div class="member-profile">
+            <img src="" alt="" />
+            <p>some text about a character</p>
+          </div>
+          <div class="member-profile">
+            <img src="" alt="" />
+            <p>some text about a character</p>
+          </div>
+          <div class="member-profile">
+            <img src="" alt="" />
+            <p>some text about a character</p>
+          </div>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
