add char images + zoom when hovered on char img

--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
           </p>
         </div>
         <div class="member-profile-top">
-          <img src="" alt="Thaergrum" />
-          <p>Marshal Thaergrum, Guild Master.</p>
+          <img src="resources/character-images/Thaergrum.gif" alt="Thaergrum" />
+          <p>Marshal Thaergrum, Guild Master, Paladin</p>
         </div>
         <div class="member-profile-bottom">
           <div class="member-profile">
-            <img src="" alt="" />
-            <p>some text about a character</p>
+            <img src="resources/character-images/Bendis warrior.gif" alt="Bendis" />
+            <p>Sargeant Major Bendis, Guild Raider, Warrior</p>
           </div>
           <div class="member-profile">
-            <img src="" alt="" />
-            <p>some text about a character</p>
+            <img src="resources/character-images/Gobert priest.gif" alt="Gobert" />
+            <p>Master Sargeant Gobert, Guild Officer, Priest</p>
           </div>
           <div class="member-profile">
-            <img src="" alt="" />
-            <p>some text about a character</p>
+            <img src="resources/character-images/uwe warlock.gif" alt="Uwe" />
+            <p>Sargeant Major Uwe, Guild Raider, Warlock</p>
           </div>
           <div class="member-profile">
-            <img src="" alt="" />
-            <p>some text about a character</p>
+            <img src="resources/character-images/Akadios gnome mage.gif" alt="Akadios" />
+            <p>Knight-Champion Akadios, Guild Raider, Mage</p>
           </div>
         </div>
       </div>
