--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <link rel="stylesheet" href="style.css" />
     <title>Lights Retribution</title>
   </head>
-  <body>
+  <body class="ironForge">
     <div class="container">
       <div class="header-contain">
         <div class="header">
           <img src="resources/alliance.png" />
-          <h1>Lights Retribution</h1>
+          <h1>Lights Retribution</h>
+          <select id="bgSelect">
+            <option value="ironForge">Ironforge</option>
+            <option value="onyxia">Onyxia</option>
+            </select>
+          <button onclick="backgroundChange()">Choose Background</button>
         </div>
       </div>
       <div class="middle-contain">
@@ -49,5 +54,6 @@
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
